--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/bundle/vim-ruby"]
 	path = vim/bundle/vim-ruby
 	url = http://github.com/vim-ruby/vim-ruby.git
+[submodule "vim/bundle/vim-coffee"]
+	path = vim/bundle/vim-coffee
+	url = http://github.com/kchmck/vim-coffee-script.git
