--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -3,19 +3,19 @@
 # uncomment the options you wish to enable.
 
 # Maximum and minimum number of peers to connect to per torrent.
-min_peers = 50
-max_peers = 80
+#min_peers = 40
+#max_peers = 100
 
 # Same as above but for seeding completed torrents (-1 = same as downloading)
 #min_peers_seed = 10
 #max_peers_seed = 50
 
 # Maximum number of simultanious uploads per torrent.
-max_uploads = 4
+#max_uploads = 15
 
 # Global upload and download rate in KiB. "0" for unlimited.
-download_rate = 0
-upload_rate = 50
+#download_rate = 0
+#upload_rate = 0
 
 # Default directory to save the downloaded torrents.
 directory = ~/Torrents
@@ -33,6 +33,12 @@ session = ~/.session
 # Close torrents when diskspace is low.
 #schedule = low_diskspace,5,60,close_low_diskspace=100M
 
+# Stop torrents when reaching upload ratio in percent,
+# when also reaching total upload in bytes, or when
+# reaching final upload ratio in percent.
+# example: stop at ratio 2.0 with at least 200 MB uploaded, or else ratio 20.0
+#schedule = ratio,60,60,"stop_on_ratio=200,200M,2000"
+
 # The ip address reported to the tracker.
 #ip = 127.0.0.1
 #ip = rakshasa.no
@@ -43,14 +49,14 @@ session = ~/.session
 #bind = rakshasa.no
 
 # Port range to use for listening.
-port_range = 60125-64125
+#port_range = 6890-6999
 
 # Start opening ports at a random position within the port range.
-port_random = yes
+#port_random = no
 
 # Check hash for finished torrents. Might be usefull until the bug is
 # fixed that causes lack of diskspace not to be properly reported.
-check_hash = yes
+#check_hash = no
 
 # Set whetever the client should try to connect to UDP trackers.
 #use_udp_trackers = yes
@@ -66,21 +72,21 @@ check_hash = yes
 # outgoing connections but retries with encryption if they fail, preferring
 # plaintext to RC4 encryption after the encrypted handshake
 #
-encryption = allow_incoming,try_outgoing,enable_retry
+# encryption = allow_incoming,enable_retry,prefer_plaintext
 
 # Enable DHT support for trackerless torrents or when all trackers are down.
 # May be set to "disable" (completely disable DHT), "off" (do not start DHT),
 # "auto" (start and stop DHT as needed), or "on" (start DHT immediately).
 # The default is "off". For DHT to work, a session directory must be defined.
-# 
-dht = auto
+
+dht = on
 
 # UDP port to use for DHT. 
-# 
-dht_port = 63425
+
+dht_port = 6881
 
 # Enable peer exchange (for torrents not marked private)
-#
+
 peer_exchange = yes
 
 #
