--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -17,6 +17,8 @@
   "vim_mode": true,
   "ui_font_size": 16,
   "buffer_font_size": 16,
+  "preferred_line_length": 80,
+  "soft_wrap": "preferred_line_length",
   "theme": {
     "mode": "system",
     "light": "Solarized Light",
